--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "k-core"
-version = "0.1.9"
+version = "0.1.10"
 edition = "2024"
 
 [features]
@@ -22,7 +22,7 @@ thiserror = "2.0.17"
 anyhow = "1.0.100"
 
 # Async
-tokio = { version = "1.48.0", features = ["full"], optional = true }
+tokio = { version = "1.48.0", features = ["full"]}
 
 # Database
 sqlx = { version = "0.8.6", features = [
